Bug 1377439 - Should adapt the oboarding UI to the hight-contrast display mode, r=mossop
This patch makes the mininmum and the important elements and images visible in the high-constrast mode, including
- making button have border (using the given default grey border in the high-constrast mode)
- making the upper-left overlay button's fox image visible
- making the images of the X close buttons on the notification bar and on the overlay visible
- making that the navigation item of the current tour on the overlay's right side would have outline
- making the hovered navigation item on the overlay's right side would have outline
- making sure using <button> element for buttons for a better semantic
- changing #onboarding-overlay-icon to #onboarding-overlay-button for a better semantic

MozReview-Commit-ID: Aj6wndb4to9

UltraBlame original commit: e9b1c60ebd4fa7689e2f4439d32e47bd9e804fc8

--- a/browser/extensions/onboarding/content/onboarding.css
+++ b/browser/extensions/onboarding/content/onboarding.css
@@ -85,16 +85,8 @@ onboarding
 -
 overlay
 -
-icon
+button
 {
-width
-:
-36px
-;
-height
-:
-29px
-;
 position
 :
 absolute
@@ -115,23 +107,27 @@ start
 :
 30px
 ;
+border
+:
+none
+;
 background
 :
-url
-(
-"
-img
-/
+none
+;
+}
+#
+onboarding
+-
 overlay
 -
-icon
-.
-svg
-"
-)
-no
+button
 -
-repeat
+icon
+{
+width
+:
+36px
 ;
 }
 #
@@ -148,7 +144,7 @@ onboarding
 -
 overlay
 -
-icon
+button
 :
 :
 after
@@ -200,7 +196,7 @@ onboarding
 -
 overlay
 -
-icon
+button
 :
 :
 after
@@ -261,18 +257,8 @@ display
 none
 ;
 }
-#
+.
 onboarding
--
-overlay
--
-close
--
-btn
-#
-onboarding
--
-notification
 -
 close
 -
@@ -306,9 +292,43 @@ height
 :
 16px
 ;
+padding
+:
+12px
+;
+border
+:
+none
+;
+background
+:
+var
+(
+-
+-
+onboarding
+-
+overlay
+-
+dialog
+-
 background
 -
-image
+color
+)
+;
+}
+.
+onboarding
+-
+close
+-
+btn
+:
+:
+before
+{
+content
 :
 url
 (
@@ -327,30 +347,29 @@ close
 svg
 )
 ;
-background
--
-position
+display
 :
-center
-center
+block
 ;
-background
+margin
 -
-repeat
+top
 :
-no
 -
-repeat
+8px
 ;
-padding
+margin
+-
+inline
+-
+start
 :
-12px
+-
+8px
 ;
 }
-#
+.
 onboarding
--
-overlay
 -
 close
 -
@@ -399,6 +418,21 @@ overlay
 -
 dialog
 {
+-
+-
+onboarding
+-
+overlay
+-
+dialog
+-
+background
+-
+color
+:
+#
+f5f5f7
+;
 width
 :
 960px
@@ -409,8 +443,20 @@ height
 ;
 background
 :
-#
-f5f5f7
+var
+(
+-
+-
+onboarding
+-
+overlay
+-
+dialog
+-
+background
+-
+color
+)
 ;
 border
 :
@@ -775,6 +821,32 @@ list
 >
 li
 {
+-
+-
+padding
+-
+inline
+-
+start
+:
+49px
+;
+-
+-
+padding
+-
+top
+:
+14px
+;
+-
+-
+padding
+-
+bottom
+:
+14px
+;
 list
 -
 style
@@ -787,19 +859,42 @@ inline
 -
 start
 :
-49px
+var
+(
+-
+-
+padding
+-
+inline
+-
+start
+)
 ;
 padding
 -
 top
 :
-14px
+var
+(
+-
+-
+padding
+-
+top
+)
 ;
 padding
 -
 bottom
 :
-14px
+var
+(
+-
+-
+padding
+-
+bottom
+)
 ;
 margin
 -
@@ -941,6 +1036,8 @@ onboarding
 -
 complete
 {
+-
+-
 padding
 -
 inline
@@ -977,6 +1074,77 @@ color
 :
 #
 0A84FF
+;
+border
+:
+1px
+solid
+transparent
+;
+padding
+-
+inline
+-
+start
+:
+calc
+(
+var
+(
+-
+-
+padding
+-
+inline
+-
+start
+)
+-
+1px
+)
+;
+padding
+-
+top
+:
+calc
+(
+var
+(
+-
+-
+padding
+-
+top
+)
+-
+1px
+)
+;
+padding
+-
+bottom
+:
+calc
+(
+var
+(
+-
+-
+padding
+-
+bottom
+)
+-
+1px
+)
+;
+background
+-
+color
+:
+#
+fff
 ;
 }
 #
@@ -1685,7 +1853,9 @@ background
 ;
 border
 :
-none
+1px
+solid
+transparent
 ;
 border
 -
@@ -2731,6 +2901,28 @@ notification
 -
 bar
 {
+-
+-
+onboarding
+-
+notification
+-
+bar
+-
+background
+-
+color
+:
+rgba
+(
+255
+255
+255
+0
+.
+97
+)
+;
 position
 :
 fixed
@@ -2766,14 +2958,19 @@ width
 ;
 background
 :
-rgba
+var
 (
-255
-255
-255
-0
-.
-97
+-
+-
+onboarding
+-
+notification
+-
+bar
+-
+background
+-
+color
 )
 ;
 border
@@ -3019,22 +3216,21 @@ close
 btn
 {
 background
+:
+var
+(
+-
+-
+onboarding
+-
+notification
+-
+bar
+-
+background
 -
 color
-:
-rgba
-(
-255
-255
-255
-0
-.
-97
 )
-;
-border
-:
-none
 ;
 position
 :
@@ -3249,7 +3445,9 @@ background
 ;
 border
 :
-none
+1px
+solid
+transparent
 ;
 border
 -
